--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation "io.springfox:springfox-boot-starter:$swaggerVersion"
 	implementation "io.springfox:springfox-swagger-ui:$swaggerVersion"
-    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation "org.springframework.boot:spring-boot-starter-log4j2"
+    developmentOnly "org.springframework.boot:spring-boot-devtools"
 	runtimeOnly "mysql:mysql-connector-java"
 	
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
