--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,12 @@ java {
 	withSourcesJar()
 }
 
+processResources {
+    filesMatching('application.*') {
+        expand(project.properties)
+    }
+}
+
 configurations {
 	[apiElements, runtimeElements].each {
 		it.outgoing.artifacts.removeIf {
