--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring.application.name: demo
+spring.application.name: ${name}
 
 spring.datasource:
   url: jdbc:mysql:///${spring.application.name}
