--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,11 @@ spring.jpa:
 spring.jackson:
   default-property-inclusion: non_null
 
-management.endpoints.web.exposure.include: "*"
+management.endpoints.web.exposure.include: health
+springfox.documentation.enabled: false
 
 ---
-spring.config.activate. on-profile: prod
-springfox.documentation.enabled: false
-management.endpoints.web.exposure.include: health
+spring.config.activate.on-profile: dev
+springfox.documentation.enabled: true
+management.endpoints.web.exposure.include: "*"
+spring.jackson.serialization.indent_output: true
