--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring.application.name: ${name}
 
 spring.datasource:
-  url: jdbc:mysql:///${spring.application.name}
+  url: jdbc:mysql:///${spring.application.name}?createDatabaseIfNotExist=true
   username: root
   password:
   hikari:
@@ -11,8 +11,7 @@ spring.datasource:
     connectionTimeout: 30000
     maxLifetime: 1800000
 
-spring.jpa:
-  hibernate.ddl-auto: update
+spring.jpa.hibernate.use-new-id-generator-mappings: false
 
 spring.jackson:
   default-property-inclusion: non_null
@@ -25,3 +24,4 @@ spring.config.activate.on-profile: dev
 springfox.documentation.enabled: true
 management.endpoints.web.exposure.include: "*"
 spring.jackson.serialization.indent_output: true
+spring.jpa.hibernate.ddl-auto: update
