--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,2 +1,3 @@
-spring.datasource:
-  url: jdbc:h2:mem:${spring.application.name};DB_CLOSE_ON_EXIT=FALSE
+spring:
+  application.name: test
+  datasource.url: jdbc:h2:mem:${spring.application.name};DB_CLOSE_ON_EXIT=FALSE
