--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 configurations {
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        resolutionStrategy.cacheChangingModulesFor 5, 'minutes'
+        resolutionStrategy.cacheDynamicVersionsFor 24, 'hours'
     }
 }
 
