--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 		}
 	}
     implementation "org.springframework.kafka:spring-kafka"
+    implementation "io.opentracing.contrib:opentracing-spring-jaeger-web-starter:latest.release"
+    implementation "io.opentracing.contrib:opentracing-jdbc:latest.release"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 	runtimeOnly "mysql:mysql-connector-java"
 	
