--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,8 @@ spring:
   config.activate.on-profile: prod
 logging:
   config: classpath:log4j2-with-kafka.xml
+spring.session:
+  store-type: redis
 management.metrics.export.influx.enabled: true
 opentracing.jaeger:
   enabled: true
