--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring.application.name: demo
 
 server:
   shutdown: graceful
+  forward-headers-strategy: framework
 
 spring.datasource:
   url: jdbc:mysql:///${spring.application.name}?createDatabaseIfNotExist=true&serverTimezone=Asia/Shanghai&autoReconnectForPools=true&useUnicode=true&useServerPrepStmts=true&cachePrepStmts=true&tinyInt1isBit=false&socketTimeout=60000&sslMode=DISABLED&allowPublicKeyRetrieval=true
@@ -61,6 +62,7 @@ spring:
   config.activate.on-profile: prod
 logging:
   config: classpath:log4j2-with-kafka.xml
+
 spring.session:
   store-type: redis
 management.metrics.export.influx.enabled: true
