Remove redundancy annotation and disable data redis repository

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring.jpa:
   open-in-view: false
   hibernate.use-new-id-generator-mappings: false
 
+spring.data.redis.repositories.enabled: false
+
 spring.cache.redis.time-to-live: 300s
 
 spring.jackson:
