--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	runtimeOnly "mysql:mysql-connector-java"
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "org.springframework.security:spring-security-test"
+	testImplementation 'io.rest-assured:spring-mock-mvc'
 	testRuntimeOnly "com.h2database:h2"
 }
 
