--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ configurations {
     }
 }
 
+ext['hibernate.version']='5.5.4+'
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-log4j2"
 	modules {
