--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+group=com.example
+version=1.0.0-SNAPSHOT
+hibernate.version=5.5.4+
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 repoUrlPrefix=http://localhost:8081/repository/maven-
 repoUser=
