Output logging only to console for test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,6 +92,12 @@ logging:
 
 ---
 spring:
+  config.activate.on-profile: test
+logging:
+  config: classpath:log4j2-test.xml
+
+---
+spring:
   config.activate.on-profile: prod
 logging:
   config: classpath:log4j2-with-kafka.xml
