--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,112 +1,20 @@
+### edit it according to your environment
 spring.application.name: demo
 
-server:
-  shutdown: graceful
-  forward-headers-strategy: framework
-  error:
-    include-message: always
-    include-binding-errors: always
-    include-stacktrace: never
-
-spring.datasource:
-  url: jdbc:mysql://${mysql.host}:${mysql.port}/${spring.application.name}?createDatabaseIfNotExist=true&serverTimezone=Asia/Shanghai&autoReconnectForPools=true&useUnicode=true&useServerPrepStmts=true&cachePrepStmts=true&tinyInt1isBit=false&socketTimeout=60000&sslMode=DISABLED&allowPublicKeyRetrieval=true
-  username: root
-  password:
-  hikari:
-    maximumPoolSize: 100
-    minimumIdle: 5
-    idleTimeout: 1800000
-    connectionTimeout: 10000
-    maxLifetime: 7200000
-    autoCommit: false
-
-spring.jpa:
-  open-in-view: false
-  hibernate.use-new-id-generator-mappings: false
-  properties.hibernate:
-    jdbc.batch_size: 50
-    order_inserts: true
-
-spring.data.web:
-  pageable:
-    default-page-size: 10
-    max-page-size: 100
-    one-indexed-parameters: true
-
-spring.data.redis.repositories.enabled: false
-
-spring.cache.redis.time-to-live: 300s
-
-spring.task:
-  execution:
-    pool.maxSize: 100
-    pool.queueCapacity: 10000
-    shutdown.awaitTermination: true
-    shutdown.awaitTerminationPeriod: 30s
-  scheduling:
-    pool.size: 5
-    shutdown.awaitTermination: true
-    shutdown.awaitTerminationPeriod: 30s
-
-spring.jackson:
-  default-property-inclusion: non_null
-  date-format: yyyy-MM-dd'T'HH:mm:ss.SSS
-  time-zone: Asia/Shanghai
-
-logging:
-  config: classpath:log4j2.xml
-  group.SQL: org.hibernate.SQL,org.hibernate.type.descriptor.sql.BasicBinder,org.springframework.jdbc.core
-
-management.endpoints.web.exposure.include: health
-management.metrics.export.influx:
-  enabled: false
-  db: metrics
-  step: 10s
-springfox.documentation.enabled: false
-
-opentracing.jaeger:
-  enabled: false
-  enable-w3c-propagation: true
-  http-sender.url: http://localhost:14268/api/traces
-  const-sampler.decision: true
-  log-spans: false
-
-# user defined variables to expand
 mysql:
-  host: localhost
+  host: localhost #shortcut for spring.datasource.url
   port: 3306
 
----
-spring:
-  config.activate.on-profile: dev|test
-  devtools.livereload.enabled: false
-  jackson.serialization.indent_output: true
-  jpa:
-    hibernate.ddl-auto: update
-    properties.hibernate:
-      hbm2ddl.default_constraint_mode: NO_CONSTRAINT
-springfox.documentation.enabled: true
-management.endpoints.web.exposure.include: "*"
-logging:
-  level.SQL: TRACE
+spring.redis:
+  host: localhost
+  port: 6379
 
----
-spring:
-  config.activate.on-profile: test
-logging:
-  config: classpath:log4j2-test.xml
+spring.kafka.bootstrap-servers:
+  - localhost:9092
 
----
-spring:
-  config.activate.on-profile: prod
-logging:
-  config: classpath:log4j2-with-kafka.xml
+management.metrics.export.influx:
+  uri: http://localhost:8086
+  db: metrics # org,bucket for V2
 
-spring.session:
-  store-type: redis
-management.metrics.export.influx.enabled: true
-opentracing.jaeger:
-  enabled: true
-  const-sampler.decision: false
-  probabilistic-sampler.sampling-rate: 0.01
-
+opentracing.jaeger.http-sender:
+  url: http://localhost:14268/api/traces
