--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation "org.springframework.kafka:spring-kafka"
 	implementation "org.springframework.session:spring-session-data-redis"
+	implementation "org.apache.commons:commons-pool2"
+	implementation "commons-net:commons-net:latest.release"
+	implementation "com.amazonaws:aws-java-sdk-s3:latest.release"
 	implementation "io.github.resilience4j:resilience4j-spring-boot2:latest.release"
 	implementation "io.opentracing.contrib:opentracing-spring-jaeger-web-starter:latest.release"
 	implementation "io.opentracing.contrib:opentracing-jdbc:latest.release"
