--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,6 @@ management.metrics.export.influx:
 
 opentracing.jaeger.http-sender:
   url: http://localhost:14268/api/traces
+
+#file-storage:
+#  uri: ftp://admin:admin@localhost/temp
