--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -8,8 +8,8 @@ server:
 
 spring.datasource:
   url: jdbc:mysql://${mysql.host}:${mysql.port}/${spring.application.name}?createDatabaseIfNotExist=true&serverTimezone=Asia/Shanghai&autoReconnectForPools=true&useUnicode=true&useServerPrepStmts=true&cachePrepStmts=true&tinyInt1isBit=false&socketTimeout=60000&sslMode=DISABLED&allowPublicKeyRetrieval=true
-  username: root
-  password:
+  username: ${mysql.username}
+  password: ${mysql.password}
   hikari:
     maximumPoolSize: 100
     minimumIdle: 5
@@ -77,6 +77,8 @@ opentracing.jaeger:
 mysql:
   host: localhost
   port: 3306
+  username: root
+  password:
 
 jaeger:
   host: localhost
