--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 	implementation(project(":cornerstone-user"))
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
 	runtimeOnly "mysql:mysql-connector-java"
+	testImplementation testFixtures(project(":cornerstone-core"))
 }
