--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -8,6 +8,10 @@ sourceCompatibility = "1.8"
 
 repositories {
 	mavenCentral()
+	maven {
+		url "${repoUrlPrefix}/maven-public/"
+		allowInsecureProtocol true
+	}
 }
 
 dependencyManagement {
