--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'io.cornerstone.java-common-conventions'
-	id 'org.springframework.boot' version 'latest.release'
+	id 'org.springframework.boot'
 	id 'war'
 }
 
