--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -14,10 +14,10 @@ dependencies {
 	api "org.springframework.boot:spring-boot-starter-actuator"
 	api "org.springframework.kafka:spring-kafka"
 	api "org.springframework.session:spring-session-data-redis"
-	api "io.github.resilience4j:resilience4j-spring-boot2:latest.release"
-	api "io.opentracing.contrib:opentracing-spring-jaeger-web-starter:latest.release"
-	api "io.opentracing.contrib:opentracing-jdbc:latest.release"
-	api "io.springfox:springfox-boot-starter:latest.release"
+	api "io.github.resilience4j:resilience4j-spring-boot2:${project.properties['resilience4j.version']?:'latest.release'}"
+	api "io.opentracing.contrib:opentracing-spring-jaeger-web-starter:${project.properties['java-spring-jaeger.version']?:'latest.release'}"
+	api "io.opentracing.contrib:opentracing-jdbc:${project.properties['opentracing-jdbc.version']?:'latest.release'}"
+	api "io.springfox:springfox-boot-starter:${project.properties['springfox.version']?:'latest.release'}"
 	testFixturesApi "org.springframework.boot:spring-boot-starter-test"
 	testFixturesApi "org.springframework.security:spring-security-test"
 }
