--- a/cornerstone-fs/build.gradle
+++ b/cornerstone-fs/build.gradle
@@ -5,7 +5,7 @@ plugins {
 dependencies {
 	api project(":cornerstone-core")
 	api "org.apache.commons:commons-pool2"
-	api "commons-net:commons-net:latest.release"
-	api "com.amazonaws:aws-java-sdk-s3:latest.release"
+	api "commons-net:commons-net:${project.properties['commons-net.version']?:'latest.release'}"
+	api "com.amazonaws:aws-java-sdk-s3:${project.properties['aws-sdk-java.version']?:'latest.release'}"
 	testImplementation(testFixtures(project(":cornerstone-core")))
 }
