--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -7,6 +7,7 @@ plugins {
 dependencies {
 	implementation(project(":cornerstone-user"))
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
+	providedRuntime "org.springframework.boot:spring-boot-starter-tomcat" // if war not jar
 	runtimeOnly "mysql:mysql-connector-java"
 	testImplementation testFixtures(project(":cornerstone-core"))
 }
