Use delombok sources for sourcesJar

--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -41,6 +41,12 @@ java {
 	withSourcesJar()
 }
 
+sourcesJar {
+	dependsOn delombok
+	from 'build/generated/sources/delombok/java/main/'
+	duplicatesStrategy DuplicatesStrategy.INCLUDE
+}
+
 clean {
 	doLast {
 		project.delete 'bin', 'logs'
