Set source encoding to UTF-8

--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -47,6 +47,10 @@ sourcesJar {
 	duplicatesStrategy DuplicatesStrategy.INCLUDE
 }
 
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
 clean {
 	doLast {
 		project.delete 'bin', 'logs'
