--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -21,4 +21,15 @@ dependencies {
 	api "org.apache.commons:commons-pool2"
 	testFixturesApi "org.springframework.boot:spring-boot-starter-test"
 	testFixturesApi "org.springframework.security:spring-security-test"
+	testFixturesApi "org.testcontainers:testcontainers"
+	testFixturesImplementation "org.testcontainers:mysql"
+	testFixturesImplementation "org.testcontainers:postgresql"
+	testFixturesImplementation "org.testcontainers:mssqlserver"
+	testFixturesImplementation "org.testcontainers:oracle-xe"
+	testFixturesImplementation "org.testcontainers:db2"
+	integrationTestRuntimeOnly "mysql:mysql-connector-java"
+	integrationTestRuntimeOnly "org.postgresql:postgresql"
+	integrationTestRuntimeOnly "com.microsoft.sqlserver:mssql-jdbc"
+	integrationTestRuntimeOnly "com.ibm.db2:jcc"
+	integrationTestRuntimeOnly "com.oracle.database.jdbc:ojdbc8"
 }
