Polishing spring.datasource.name

--- a/cornerstone-core/src/main/resources/default.yml
+++ b/cornerstone-core/src/main/resources/default.yml
@@ -7,6 +7,7 @@ server:
     include-stacktrace: never
 
 spring.datasource:
+  name: ${spring.application.name}
   url: jdbc:mysql://${mysql.host}:${mysql.port}/${spring.application.name}?createDatabaseIfNotExist=true&serverTimezone=Asia/Shanghai&autoReconnectForPools=true&useUnicode=true&useServerPrepStmts=true&cachePrepStmts=true&tinyInt1isBit=false&socketTimeout=60000&sslMode=DISABLED&allowPublicKeyRetrieval=true
   username: ${mysql.username}
   password: ${mysql.password}
@@ -119,7 +120,9 @@ logging:
 ---
 spring:
   config.activate.on-profile: test
-  datasource.url: jdbc:h2:mem:${spring.application.name};DB_CLOSE_ON_EXIT=FALSE
+  datasource:
+    name: null
+    url: jdbc:h2:mem:${spring.application.name};DB_CLOSE_ON_EXIT=FALSE
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
