--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -52,6 +52,8 @@ dependencies {
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "org.springframework.security:spring-security-test"
 	testRuntimeOnly "com.h2database:h2"
+	testImplementation(testFixtures(project(":cornerstone-core")))
+	integrationTestImplementation(testFixtures(project(":cornerstone-core")))
 }
 
 configurations.all {
