--- a/cornerstone-core/build.gradle
+++ b/cornerstone-core/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	testFixturesApi "org.springframework.boot:spring-boot-starter-test"
 	testFixturesApi "org.springframework.security:spring-security-test"
 	testFixturesApi "org.testcontainers:testcontainers"
+	testFixturesApi "org.testcontainers:junit-jupiter"
 	testFixturesImplementation "org.testcontainers:mysql"
 	testFixturesImplementation "org.testcontainers:postgresql"
 	testFixturesImplementation "org.testcontainers:mssqlserver"
