--- a/buildSrc/src/main/groovy/io.cornerstone.java-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-library-conventions.gradle
@@ -10,7 +10,8 @@ publishing {
 			from components.java
 			versionMapping {
 				usage("java-api") {
-					fromResolutionOf("runtimeClasspath")
+					def hasTestFixtures = project.configurations.collect {it.name}.contains('testFixturesRuntimeClasspath')
+					fromResolutionOf(hasTestFixtures ? 'testFixturesRuntimeClasspath' : 'runtimeClasspath')
 				}
 				usage("java-runtime") {
 					fromResolutionResult()
