--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,6 @@ group=io.cornerstone
 version=1.0.0-SNAPSHOT
 hibernate.version=5.5+
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
-repoUrlPrefix=http://localhost:8081/repository
+#repoUrlPrefix=http://localhost:8081/repository
 repoUser=admin
 repoPassword=password
