--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,12 @@
 pluginManagement {
 	repositories {
-		gradlePluginPortal()
-		maven {
-			url "${repoUrlPrefix}/gradle-plugins/"
-			allowInsecureProtocol true
+		if (rootProject.hasProperty('repoUrlPrefix')) {
+			maven {
+				url "${repoUrlPrefix}/gradle-plugins/"
+				allowInsecureProtocol true
+			}
+		} else {
+			gradlePluginPortal()
 		}
 	}
 }
