--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -7,10 +7,13 @@ plugins {
 sourceCompatibility = '11'
 
 repositories {
-	mavenCentral()
-	maven {
-		url "${repoUrlPrefix}/maven-public/"
-		allowInsecureProtocol true
+	if (rootProject.hasProperty('repoUrlPrefix')) {
+		maven {
+			url "${repoUrlPrefix}/maven-public/"
+			allowInsecureProtocol true
+		}
+	} else {
+		mavenCentral()
 	}
 }
 
