Make check task optionally depends on integrationTest

--- a/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.cornerstone.java-common-conventions.gradle
@@ -101,4 +101,6 @@ tasks.register('integrationTest', Test) {
 	shouldRunAfter test
 }
 
-// check.dependsOn integrationTest
+if (rootProject.hasProperty('integration')) {
+	check.dependsOn integrationTest
+}
