--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 dependencies {
 	implementation(project(":cornerstone-user"))
+	implementation(project(":cornerstone-loginrecord"))
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
 	providedRuntime "org.springframework.boot:spring-boot-starter-tomcat" // if war not jar
 	runtimeOnly "mysql:mysql-connector-java"
