Stick Spring Boot version to 2.5.x
springfox 3.0.0 doesn't support 2.6

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 group=io.cornerstone
 version=1.0.0-SNAPSHOT
+spring-boot.version=2.5+
 hibernate.version=5.6+
 # gradle publish -PrepoUser=xxx -PrepoPassword=xxx
 #repoUrlPrefix=http://localhost:8081/repository
